[package]
name = "my-gtk-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.18.3", features = ["v1_18"] }
env_logger = "0.10.1"
libc = "0.2.150"
log = "0.4.20"
wayland-client = "0.31.1"
wayland-egl = "0.32.0"
wayland-protocols = "0.31.0"
wayland-protocols-misc = { version = "0.2.0", features = ["client"] }
xkbcommon = "0.7.0"

